--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
   "dependencies": {
     "primevue": "^3.51.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10",
+    "@fullcalendar/vue3": "^6.1.10"
+
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.2",
